--- a/.gitattributes
+++ b/.gitattributes
@@ -32,6 +32,13 @@
 *.css linguist-detectable=true
 *.css linguist-documentation=false
 *.css linguist-language=CSS
+# Unity3D Asset source file
+*.unity linguist-detectable=true
+*.unity linguist-documentation=false
+*.unity linguist-language=Unity3D-Asset
+*.meta linguist-detectable=true
+*.meta linguist-documentation=false
+*.meta linguist-language=Unity3D-Asset
 # Less stylesheet file
 *.less linguist-detectable=true
 *.less linguist-documentation=false
@@ -164,7 +171,7 @@
 # End of linguist script
 
 # File info
-# File type: gitattributes file (.gitattributes)
-# File version: 4 (2022, Tuesday, June 28th at 2:32 pm PST)
-# Line count (including blank lines and compiler line): 171
+# File type: gitattributes file (*.gitattributes)
+# File version: 5 (2022, Saturday, October 29th at 3:23 pm PST)
+# Line count (including blank lines and compiler line): 178
 # End of script
